--- a/index.html
+++ b/index.html
@@ -1,44 +1,101 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 <head>
-<title>Cross-Browser QRCode generator for Javascript</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="qrcode.js"></script>
+    <title>Cross-Browser QRCode generator for Javascript</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="qrcode.js"></script>
+    <script type="text/javascript" src="new.js"></script>
 </head>
 <body>
-<input id="text" type="text" value="http://jindo.dev.naver.com/collie" style="width:80%" /><br />
-<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
+    <!-- <input id="text" type="text" value="http://jindo.dev.naver.com/collie" style="width:80%" /><br /> -->
+    <input id="text" type="text" value='HELLO WORLD' style="width:80%" /><br />
+    <div id="qrcode" style="width:400px; height:400px; margin: 30px 20%;"></div>
+    <div>
+        <label for="name">姓名</label>
+    <input id="name" type="text">
+    </div>
+    <div>
+        <label for="tel">电话</label>
+        <input id="tel" type="tel">
+    </div>
+    <div>
+        <label for="identityType">证件类型</label>
+        <select id="identityType">
+            <option value="身份证">身份证</option>
+            <option value="军官证">军官证</option>
+            <option value="其他证件">其他证件</option>
+        </select>
+    </div>
+    <div>
+        <label for="idcard">证件号</label>
+        <input id="idcard" type="text">
+    </div>
+    <div>
+        <label for="gender">性别</label>
+        <select id="sex">
+            <option value=1>男</option>
+            <option value=0>女</option>
+        </select>
+    </div>
+    <div>
+        <label for="birthday">出生日期</label>
+        <input id="birthday" type="date">
+    </div>
+    <div>
+        <label for="address">住址</label>
+        <input id="address" type="text">
+    </div>
+    <input type="button" onclick="getInfo()" value="submit">
 
-<script type="text/javascript">
-var qrcode = new QRCode(document.getElementById("qrcode"), {
-	width : 100,
-	height : 100
-});
+    <script type="text/javascript">
+        var ele = document.getElementById("qrcode");
+        var qrcode = new QRCode(ele, {
+            width : parseInt(ele.style.width),
+            height : parseInt(ele.style.height)
+        });
 
-function makeCode () {		
-	var elText = document.getElementById("text");
-	
-	if (!elText.value) {
-		alert("Input a text");
-		elText.focus();
-		return;
-	}
-	
-	qrcode.makeCode(elText.value);
-}
+        function makeCode () {        
+            var elText = document.getElementById("text");
+            
+            if (!elText.value) {
+                alert("Input a text");
+                elText.focus();
+                return;
+            }
+            qrcode.makeCode(elText.value);
+        }
 
-makeCode();
+        makeCode();
 
-$("#text").
-	on("blur", function () {
-		makeCode();
-	}).
-	on("keydown", function (e) {
-		if (e.keyCode == 13) {
-			makeCode();
-		}
-	});
-</script>
+        $("#text").
+            on("blur", function () {
+                makeCode();
+            }).
+            on("keydown", function (e) {
+                if (e.keyCode == 13) {
+                    makeCode();
+                    data = new QRData(document.getElementById("text").value);
+                    console.log(data);
+                }
+            });
+        function getInfo() {
+            var o = {};
+            o.name = document.getElementById("name").value;
+            o.tel = document.getElementById("tel").value;
+            o.identityType = document.getElementById("identityType").value;
+            o.idcard = document.getElementById("idcard").value;
+            o.sex = document.getElementById("sex").value;
+            o.gender = o.sex ? "男性" : "女性";
+            o.birthday = document.getElementById("birthday").value;
+            var now = new Date();
+            o.age = now.getFullYear() - parseInt(o.birthday);
+            o.address = document.getElementById("address").value;
+            console.log(JSON.stringify(o));
+            console.log(typeof(o.birthday));
+            window.alert(encoder.encode(JSON.stringify(o)).length);
+            qrcode.makeCode(JSON.stringify(o));
+        }
+    </script>
 </body>
