refactor the QRModole. It works, but still bugs.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <!-- <input id="text" type="text" value="http://jindo.dev.naver.com/collie" style="width:80%" /><br /> -->
-    <input id="text" type="text" value='HELLO WORLD' style="width:80%" /><br />
-    <div id="qrcode" style="width:400px; height:400px; margin: 30px 20%;"></div>
+    <input id="text" type="text" value='德国古典音乐' style="width:80%" /><br />
+    <!-- <input id="text" type="text" value='ajksdhflkajsproiqwuepriqwe0-r9q8-we8r-9qw8erqweiriqwe0utuiytiu8787098ghgkjhhg' style="width:80%" /><br /> -->
+    <div id="qrcode" style="width:400px; height:400px; margin: 30px 5%;"></div>
     <div>
         <label for="name">姓名</label>
     <input id="name" type="text">
